<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/blanco"
    tools:context="NotiTv.PSjuan.notitv.Splash_desarrollador" >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center" >
        <ImageView
            android:src="@drawable/universidad"
            android:layout_width="80dp"
    		android:layout_height="80dp"
    		android:contentDescription="@string/usuario" />
       	<ImageView
            android:src="@drawable/telematica"
            android:layout_width="80dp"
    		android:layout_height="80dp"
    		android:contentDescription="@string/usuario" />
    </LinearLayout>
 	    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rayas"
        android:layout_marginBottom="30dp" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grupo1" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grupo2" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grupo3" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grupo4" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grupo5" />
    	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rayas" />
 	    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enfasis" />
   	    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/universidad" />
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ano" />                        
</LinearLayout>