<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="NotiTv.PSjuan.notitv.Identificacion" >
	
    	<TextView
    	android:textColor="@color/blanco"
    	android:textSize="20dp"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido" />
   		<TextView
   		android:textColor="@color/blanco"
    	android:textSize="20dp"
       	android:layout_marginBottom="50dp"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datos" />
    	    
    	<EditText
    	android:gravity="center"
    	android:inputType="text"
    	android:background="@drawable/edittext_selector"
    	android:id="@+id/usuario"
    	android:padding="10dp"
    	android:textColorHint="@color/gris_claro"
    	android:hint="@string/ing_usuario"  
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"/>
    	

    	<EditText
    	android:gravity="center"
    	android:background="@drawable/edittext_selector"
    	android:inputType="textPassword"
    	android:id="@+id/contrasena"
    	android:padding="10dp"
    	android:hint="@string/ing_contrasena"
    	android:textColorHint="@color/gris_claro"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"/>
    	
    	<Button
    	android:id="@+id/btn_ingresar"
        style="@style/boton_azul"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:layout_marginBottom="30dp"/>
    	
    	<ImageView
    	android:src="@drawable/logo"
    	android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp" android:contentDescription="hola"/>
    	
    	<Button
    	android:id="@+id/btn_registro"
        style="@style/boton_naranja"
    	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:layout_marginBottom="30dp"/>
</LinearLayout>